[gd_scene load_steps=10 format=3 uid="uid://c8oqxmm2w2wvv"]

[ext_resource type="Script" path="res://world.gd" id="1_6tkge"]
[ext_resource type="PackedScene" uid="uid://c1j7an8woikyd" path="res://environment.tscn" id="1_iktak"]
[ext_resource type="Script" path="res://GameManager.gd" id="3_sftka"]
[ext_resource type="AudioStream" uid="uid://3mryefr6wcbu" path="res://dramatic-scene-separation-melancholy-demo-version-159310.mp3" id="4_5sm8n"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u5pdl"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_w2qqb"]
sky_material = SubResource("ProceduralSkyMaterial_u5pdl")

[sub_resource type="Environment" id="Environment_6knbf"]
background_mode = 2
sky = SubResource("Sky_w2qqb")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wx4fl"]
bg_color = Color(1, 0.117647, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1v4s7"]
bg_color = Color(0.00392157, 1, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_6tkge")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_6knbf")

[node name="Environment" parent="." instance=ExtResource("1_iktak")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -107.0
offset_right = 227.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerName" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
placeholder_text = "Player name"
alignment = 1

[node name="HostButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Address to Join Here"
alignment = 1

[node name="QUIT" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "QUIT GAME"

[node name="HUD" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HP" type="ProgressBar" parent="CanvasLayer/HUD"]
clip_contents = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -38.0
offset_right = 110.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_wx4fl")
theme_override_styles/fill = SubResource("StyleBoxFlat_1v4s7")
value = 100.0
show_percentage = false

[node name="HPText" type="Label" parent="CanvasLayer/HUD/HP"]
layout_mode = 0
offset_left = 2.0
offset_top = -2.0
offset_right = 42.0
offset_bottom = 21.0
text = "100"

[node name="Death" type="Control" parent="CanvasLayer/HUD"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeathMessage" type="Label" parent="CanvasLayer/HUD/Death"]
layout_mode = 0
offset_left = 534.0
offset_top = 122.0
offset_right = 642.0
offset_bottom = 145.0
text = "You are Dead "
uppercase = true

[node name="RespawnButton" type="Button" parent="CanvasLayer/HUD/Death"]
layout_mode = 0
offset_left = 509.0
offset_top = 504.0
offset_right = 664.0
offset_bottom = 559.0
text = "Respawn"

[node name="KillCount" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -98.0
offset_top = 46.0
offset_right = -26.0
offset_bottom = 74.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "kills : "

[node name="DeathCount" type="Label" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 23.0
offset_right = -23.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "deaths :"

[node name="MuteButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -123.0
offset_top = 30.0
offset_right = -41.0
offset_bottom = 80.0
grow_horizontal = 0
text = "Mute ðŸ”Š"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="MainCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 27.69, 26.945)
visible = false

[node name="GameManager" type="Node" parent="."]
script = ExtResource("3_sftka")

[node name="MainMenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5sm8n")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/QUIT" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CanvasLayer/MuteButton" to="." method="_on_button_pressed"]
[connection signal="spawned" from="MultiplayerSpawner" to="." method="_on_multiplayer_spawner_spawned"]
